--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,18 @@
           <version>1.0.2</version>
       </dependency>
 
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi</artifactId>
+          <version>5.3.0</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi-ooxml</artifactId>
+          <version>5.3.0</version>
+      </dependency>
+
 
 
   </dependencies>
